--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,3 +4,11 @@
 .headless-drawer .p-drawer-header {
    padding: 0 !important;
 }
+
+.list-enter-active,
+.list-leave-active {
+   transition: all 0.3s ease;
+}
+.list-enter-from {
+   opacity: 0;
+}
