--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,11 +9,12 @@
 }
 :root {
    --safe-area-top: env(safe-area-inset-top, 0px);
+   --safe-area-bottom: env(safe-area-inset-bottom, 0);
 }
 
 @theme {
    --spacing-safe-top: var(--safe-area-top);
-   --spacing-safe-bottom: 45px;
+   --spacing-safe-bottom: var(--safe-area-bottom);
 }
 
 .list-enter-active,
@@ -42,6 +43,10 @@
 
 .border-secondary {
    @apply border-surface-200 dark:border-surface-800;
+}
+
+.border-input {
+   @apply border-surface-200 dark:border-surface-600;
 }
 
 .text-secondary {
