--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tailwindcss-primeui";
 @import "swiper/css";
+@import "swiper/css/pagination";
 
 @custom-variant dark (&:where(.p-dark, .p-dark *));
 .headless-drawer .p-drawer-header,
