--- a/resources/shared/css/ui.scss
+++ b/resources/shared/css/ui.scss
@@ -3,3 +3,6 @@
 @use "./components/button";
 @use "./components/accordion";
 @use "./components/input-text";
+@use "./components/textarea";
+@use "./components/select";
+@use "./components/tree";
