--- a/resources/application/app.css
+++ b/resources/application/app.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 @import "swiper/css";
 @import "swiper/css/pagination";
-
-@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant dark (.dark &);
 @theme {
    --spacing-safe-top: var(--safe-area-top);
    --spacing-safe-bottom: var(--safe-area-bottom);
