--- a/resources/admin/adminApp.css
+++ b/resources/admin/adminApp.css
@@ -1,4 +1,70 @@
 @import "tailwindcss";
+@import "tailwindcss-primeui";
 @import "swiper/css";
 @import "swiper/css/pagination";
 @custom-variant dark (&:where(.p-dark, .p-dark *));
+.headless-drawer .p-drawer-header,
+.headless-dialog .p-dialog-header {
+   padding: 0 !important;
+}
+
+.p-drawer-content {
+   padding-bottom: 0 !important;
+}
+
+@layer base {
+   :root {
+      --p-button-secondary-background: rgba(255, 255, 255, 0.7) !important;
+      --p-button-secondary-border-color: rgba(255, 255, 255, 0.7) !important;
+   }
+}
+
+.list-enter-active,
+.list-leave-active {
+   transition: all 0.3s ease;
+}
+.list-enter-from {
+   opacity: 0;
+}
+
+.p-tree {
+   padding: 0 !important;
+}
+
+.p-tree-node-label {
+   @apply w-full;
+}
+
+.bg-tertiary {
+   @apply bg-white! dark:bg-surface-900!;
+}
+
+.bg-secondary {
+   @apply bg-surface-50 dark:bg-black;
+}
+
+.border-secondary {
+   @apply border-surface-200 dark:border-surface-800;
+}
+
+.border-input {
+   @apply border-surface-200 dark:border-surface-600;
+}
+
+.text-secondary {
+   @apply text-surface-600 dark:text-surface-400;
+}
+
+.text-tertiary {
+   @apply text-surface-800 dark:text-surface-200;
+}
+
+.p-datatable-table th,
+.p-datatable-table thead,
+.p-datatable-table tr,
+.p-datatable-table td {
+   background: transparent !important;
+}
+.no-last-border .p-datatable-tbody > tr:last-child > td {
+   border-bottom: none !important;
+}
