--- a/resources/shared/css/_tokens.scss
+++ b/resources/shared/css/_tokens.scss
@@ -1,4 +1,6 @@
 :root {
+   --default-background: #ffffff;
+
    /* SPACING */
    --space-sm: 8px;
    --space-md: 12px;
@@ -15,7 +17,7 @@
    --color-primary-hover: #1d4ed8;
    --color-danger: #dc2626;
 
-   --color-surface: #ffffff;
+   --color-surface: #f8fafc;
    --color-surface-muted: #f9fafb;
 
    --color-text-primary: #111827;
@@ -46,13 +48,23 @@
 //    --drop-stripe-light: rgba(255, 255, 255, 0.08);
 //    --drop-stripe-dark: rgba(255, 255, 255, 0.02);
 // }
+
+@font-face {
+   font-family: "Plus Jakarta Sans";
+   src: url("../PlusJakartaSans-Regular.ttf") format("truetype");
+   font-weight: 400;
+   font-style: normal;
+   font-display: swap;
+}
+
 * {
    box-sizing: border-box;
+   font-family: "Plus Jakarta Sans", system-ui, sans-serif;
 }
 
 body {
    margin: 0;
-   background: var(--color-surface);
+   background: var(--default-background);
    color: var(--color-text-primary);
    font-family: system-ui, sans-serif;
 }
