--- a/resources/shared/css/components/_input-text.scss
+++ b/resources/shared/css/components/_input-text.scss
@@ -27,7 +27,7 @@
    width: 100%;
    padding: var(--space-md);
    border-radius: var(--radius-sm);
-   border: 1px solid var(--color-border);
+   border: 1px solid var(--color-surface);
 
    background-color: var(--color-surface);
    color: var(--color-text-primary);
