--- a/resources/shared/css/_tokens.scss
+++ b/resources/shared/css/_tokens.scss
@@ -13,7 +13,7 @@
    --color-border: #e9e9e9;
 
    /* COLORS */
-   --color-primary: #059669;
+   --color-primary: #3063ee;
    --color-primary-hover: #1d4ed8;
    --color-danger: #dc2626;
 
@@ -32,22 +32,6 @@
    --drop-stripe-dark: rgba(0, 0, 0, 0.06);
    --drop-stripe-width: 24px;
 }
-
-// html.dark {
-//    --color-primary: #3b82f6;
-//    --color-primary-hover: #60a5fa;
-//    --color-danger: #f87171;
-
-//    --color-surface: #1a1a1a;
-//    --color-surface-muted: #2d2d2d;
-//    --color-border: #404040;
-
-//    --color-text-primary: #f8fafc;
-//    --color-text-secondary: #94a3b8;
-
-//    --drop-stripe-light: rgba(255, 255, 255, 0.08);
-//    --drop-stripe-dark: rgba(255, 255, 255, 0.02);
-// }
 
 @font-face {
    font-family: "Plus Jakarta Sans";
@@ -68,3 +52,19 @@ body {
    color: var(--color-text-primary);
    font-family: system-ui, sans-serif;
 }
+
+// html.dark {
+//    --color-primary: #3b82f6;
+//    --color-primary-hover: #60a5fa;
+//    --color-danger: #f87171;
+
+//    --color-surface: #1a1a1a;
+//    --color-surface-muted: #2d2d2d;
+//    --color-border: #404040;
+
+//    --color-text-primary: #f8fafc;
+//    --color-text-secondary: #94a3b8;
+
+//    --drop-stripe-light: rgba(255, 255, 255, 0.08);
+//    --drop-stripe-dark: rgba(255, 255, 255, 0.02);
+// }
