--- a/resources/shared/css/components/_textarea.scss
+++ b/resources/shared/css/components/_textarea.scss
@@ -1,7 +1,7 @@
 .ui-textarea {
    padding-block: var(--input-py);
    border-radius: var(--input-radius);
-   border: 1px solid var(--color-border);
+   background: var(--color-surface);
 
    --input-px: var(--space-md);
    --input-py: var(--space-md);
@@ -19,6 +19,10 @@
       --input-py: var(--space-lg);
       font-size: 1rem;
    }
+
+   &:focus-within {
+      box-shadow: 0 0 1px 2px color-mix(in srgb, var(--color-primary) 75%, transparent);
+   }
 }
 
 .ui-textarea__field {
@@ -27,21 +31,13 @@
 
    padding-inline: var(--input-px);
 
-   background: var(--color-surface);
    color: var(--color-text-primary);
 
    line-height: 1.4;
 
-   transition:
-      border-color var(--duration-fast),
-      box-shadow var(--duration-fast);
+   transition: box-shadow var(--duration-fast);
 
    &::placeholder {
       color: var(--color-text-secondary);
-   }
-
-   &:focus {
-      border-color: var(--color-primary);
-      box-shadow: 0 0 0 2px color-mix(in srgb, var(--color-primary) 20%, transparent);
    }
 }
