--- a/resources/application/app.css
+++ b/resources/application/app.css
@@ -42,3 +42,25 @@
    transform: translateX(-30%) scale(0.9); /* Orqaga biroz suriladi */
    opacity: 0;
 }
+
+/* Orqaga qaytishda sahifa kirib kelishi */
+.slide-out-enter-active,
+.slide-out-leave-active {
+   transition: all 0.25s ease;
+   position: absolute;
+   width: 100%;
+   top: 0;
+   left: 0;
+}
+
+/* Kirayotgan sahifa boshlang‘ich holati (chapda) */
+.slide-out-enter-from {
+   transform: translateX(-100%);
+   z-index: 2;
+}
+
+/* Eski sahifa chiqib ketayotgan holati (o‘ng tomonga suriladi) */
+.slide-out-leave-to {
+   transform: translateX(30%) scale(0.9);
+   opacity: 0;
+}
