--- a/resources/application/app.css
+++ b/resources/application/app.css
@@ -64,3 +64,11 @@
    transform: translateX(30%) scale(0.9);
    opacity: 0;
 }
+
+.no-scrollbar {
+   -ms-overflow-style: none; /* IE, Edge */
+   scrollbar-width: none; /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+   display: none; /* Chrome, Safari */
+}
