--- a/resources/shared/css/components/_input-text.scss
+++ b/resources/shared/css/components/_input-text.scss
@@ -26,7 +26,7 @@
 .input-text {
    width: 100%;
    padding: var(--space-md);
-   border-radius: var(--radius-sm);
+   border-radius: var(--radius-md);
    border: 1px solid var(--color-surface);
 
    background-color: var(--color-surface);
