--- a/resources/shared/css/ui.scss
+++ b/resources/shared/css/ui.scss
@@ -1,7 +1,6 @@
 @use "./tokens";
 
 @use "./components/button";
-@use "./components/accordion";
-@use "./components/input-text";
-@use "./components/textarea";
-@use "./components/select";
+@use "./components/field-text";
+@use "./components/field-textarea";
+@use "./components/field-select";
