--- a/resources/shared/css/components/_field-core.scss
+++ b/resources/shared/css/components/_field-core.scss
@@ -23,8 +23,7 @@
 
    /* FOCUS */
    &:focus-within {
-      outline: none;
-      box-shadow: 0 0 1px 2px color-mix(in srgb, var(--z-color-primary) 75%, transparent);
+      outline: 2px solid color-mix(in srgb, var(--z-color-primary) 70%, transparent);
    }
 
    /* DISABLED */
