--- a/resources/shared/css/components/_field-textarea.scss
+++ b/resources/shared/css/components/_field-textarea.scss
@@ -1,7 +1,6 @@
 .ui-textarea {
    padding-block: var(--input-py);
    border-radius: var(--input-radius);
-   background: var(--color-surface);
 
    --input-px: var(--space-md);
    --input-py: var(--space-md);
@@ -18,10 +17,6 @@
       --input-px: var(--space-lg);
       --input-py: var(--space-lg);
       font-size: 1rem;
-   }
-
-   &:focus-within {
-      box-shadow: 0 0 1px 2px color-mix(in srgb, var(--color-primary) 75%, transparent);
    }
 }
 
@@ -40,6 +35,6 @@
 
    &::placeholder {
       font-size: 14px;
-      color: var(--color-text-secondary);
+      color: var(--z-color-text-secondary);
    }
 }
