--- a/resources/shared/css/ui.scss
+++ b/resources/shared/css/ui.scss
@@ -25,7 +25,7 @@
    --z-color-border: #eeeeee;
 
    /* COLORS */
-   --z-color-primary: #007aff;
+   --z-color-primary: #002ae4;
    --z-color-danger: #ff3b30;
 
    --z-bg-field: #f8f8f8;
