--- a/resources/application/app.css
+++ b/resources/application/app.css
@@ -51,7 +51,7 @@
 
 /* Eski sahifa chiqib ketayotgan holati (joyida qolishi yoki biroz xiralashishi mumkin) */
 .slide-in-leave-to {
-   transform: translateX(-30%) scale(0.98); /* Orqaga biroz suriladi */
+   transform: translateX(-30%); /* Orqaga biroz suriladi */
    opacity: 0;
 }
 
@@ -73,7 +73,7 @@
 
 /* Eski sahifa chiqib ketayotgan holati (o‘ng tomonga suriladi) */
 .slide-out-leave-to {
-   transform: translateX(30%) scale(0.98);
+   transform: translateX(30%);
    opacity: 0;
 }
 
