--- a/resources/shared/css/components/_field-textarea.scss
+++ b/resources/shared/css/components/_field-textarea.scss
@@ -35,6 +35,6 @@
 
    &::placeholder {
       font-size: 14px;
-      color: var(--z-color-text-secondary);
+      color: var(--z-secondary);
    }
 }
