--- a/resources/shared/css/components/_button.scss
+++ b/resources/shared/css/components/_button.scss
@@ -51,7 +51,7 @@
 }
 
 .ui-button[data-severity="secondary"] {
-   --btn-bg: var(--z-card);
+   --btn-bg: var(--z-secondary);
    --btn-bg-hover: var(--z-border);
    --btn-text: var(--z-primary);
 }
