--- a/resources/shared/css/components/_field-core.scss
+++ b/resources/shared/css/components/_field-core.scss
@@ -23,7 +23,7 @@
 
    /* PLACEHOLDER */
    &::placeholder {
-      color: var(--z-secondary);
+      color: var(--z-muted-text);
    }
 
    /* FOCUS */
